prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_return_literal_mismatch.diag.txt
ERROR: expression of type 'string' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_return_literal_mismatch.nut:3:4

function fn(): int {
    return "hello"
    ^-------------
}


